2009-07-10  Christian Hoff  <christian_hoff@gmx.net>

	* pango/Pango.metadata: Mark "ink_rect" and "logical_rect" parameters of Get*Extends
	methods as "out".  [Fixes #510105]

2009-07-02  Christian Hoff  <christian_hoff@gmx.net>

	* configure.in.in: Target .net 2.0 profile
	* gapi-cdecl-insert: Kill. We are now using the UnmanagedFunctionPointerAttribute
	for callbacks.
	* glib/CdeclCallback.cs: Mark obsolete.
	* generator/*.cs:
	* *.custom: Use [UnmanagedFunctionPointer (CallingConvention.Cdecl)] instead of
	[GLib.CDeclCallback].

2009-06-15  Christian Hoff  <christian_hoff@gmx.net>

	* gtk/Widget.custom: Don't use [MarshalAs] for struct fields since
	that is not supported in the .net framework

2009-06-08  Christian Hoff  <christian_hoff@gmx.net>

	* generator/Signal.cs: Fix indexing of the signal arguments array for
	"out" and "ref" parameters.  [Fixes #508572]

2009-05-28  Aaron Bockover  <abockover@novell.com>

	* generator/EnumGen.cs: Fix enum generator to properly parse integer
	values with type modifier suffixes (UL, L, U), and not accidentally
	munge named values that happen to end in one of these suffixes

2009-05-18  Stephane Delcroix  <sdelcroix@novell.com>

	* configure.in.in:
	* bootstrap-generic:
	* bootstrap-2.14: check for mono >= 2.2. not that it requires it to
	build, but the generated bindings need it to run.

2009-05-13  Sebastian Dröge  <sebastian.droege@collabora.co.uk>

	* glib/Value.cs: return int object value for GType.Enum values if
	the explicit gtype is not found.  [Fixes #503060]

2009-05-13  Sebastian Dröge  <sebastian.droege@collabora.co.uk>

	* glib/ValueArray.cs: use type specific PtrToStructure marshaling to
	avoid ArgumentExceptions.  [Fixes #503467]

2009-05-13  Sebastian Dröge  <sebastian.droege@collabora.co.uk>

	* glib/Value.cs: Add support for ValueArrays inside GLib.Values.
	* glib/ValueArray.cs: Add GType property to get the ValueArray GType.
	[Fixes #503048]

2009-05-12  Mike Kestner  <mkestner@novell.com>
