@@ -1,3 +1,9 @@
+2009-07-12  Mike Kestner  <mkestner@novell.com>
+
+	* generator/ObjectBase.cs: add CallByName overload with ownership.
+	* generator/Parameters.cs: support owned by callee parameters.
+	Adapted from a patch by Maarten Bosmans. [Fixes #513680]
+
 2009-07-10  Christian Hoff  <christian_hoff@gmx.net>
 
 	* pango/Pango.metadata: Mark "ink_rect" and "logical_rect" parameters of Get*Extends
